[package]
name = "midi20"
version = "0.1.1"
authors = [
  "Mike Hilgendorf <mike@hilgendorf.audio>",
  "Lukas Navickas <lukas.navickas@icloud.com>"
]
edition = "2018"
license = "MIT"
description = "Types and helpers for building MIDI 2.0 capable software."
repository = "https://github.com/m-hilgendorf/midi20"

[dependencies]

[features]
default = []
no-std = []
