[package]
name = "midi20"
version = "0.3.0"
edition = "2018"
license = "MIT"
description = "Types and helpers for building MIDI 2.0 capable software."
repository = "https://github.com/m-hilgendorf/midi20"

[dependencies]
vst3 = { version = "0.1", optional = true }

[features]
default = []
no-std = []
vst3 = ["dep:vst3"]
